--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-REACT_APP_CHAIN_ID = "56"
+REACT_APP_CHAIN_ID = "128"
 REACT_APP_GTAG = "GTM-PXLD3XW"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_1 = "https://bsc-dataseed1.ninicoin.io"
+REACT_APP_NODE_1 = "https://http-mainnet-node.huobichain.com"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_2 = "https://bsc-dataseed1.defibit.io"
+REACT_APP_NODE_2 = "https://http-mainnet-node.defibox.com"
 
 # 10+ nodes balanced in each region, global
-REACT_APP_NODE_3 = "https://bsc-dataseed.binance.org"
+REACT_APP_NODE_3 = "https://http-mainnet.hecochain.com"
 
 REACT_APP_SUBGRAPH_PROFILE = "https://api.thegraph.com/subgraphs/name/pancakeswap/profile"
